// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AzNavRail renders correctly when expanded 1`] = `
<View
  style={
    {
      "flex": 1,
      "flexDirection": "row",
      "height": "100%",
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "transparent",
        "bottom": 0,
        "left": 0,
        "opacity": 1,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "zIndex": 5,
      }
    }
  />
  <View
    collapsable={false}
    onMoveShouldSetResponder={[Function]}
    onMoveShouldSetResponderCapture={[Function]}
    onResponderEnd={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderReject={[Function]}
    onResponderRelease={[Function]}
    onResponderStart={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onStartShouldSetResponderCapture={[Function]}
    style={
      {
        "backgroundColor": "#f0f0f0",
        "borderColor": "#ddd",
        "borderLeftWidth": 0,
        "borderRightWidth": 1,
        "height": "100%",
        "overflow": "hidden",
        "position": "relative",
        "transform": [],
        "width": 160,
        "zIndex": 10,
      }
    }
  >
    <View
      accessibilityHint="Double tap to toggle, long press to drag"
      accessibilityLabel="Collapse Menu"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onLayout={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "opacity": 1,
          "padding": 16,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "gray",
            "borderRadius": 24,
            "height": 48,
            "justifyContent": "center",
            "width": 48,
          }
        }
      >
        <Text
          style={
            {
              "color": "white",
            }
          }
        >
          Icon
        </Text>
      </View>
      <Text
        numberOfLines={1}
        style={
          [
            {
              "fontSize": 18,
              "fontWeight": "bold",
            },
            {
              "flexShrink": 0,
              "marginLeft": 16,
              "marginRight": 0,
              "minWidth": 200,
            },
          ]
        }
      >
        App Name
      </Text>
    </View>
    <RCTScrollView
      style={
        {
          "flex": 1,
        }
      }
    >
      <View>
        <View
          collapsable={false}
          onLayout={[Function]}
          style={
            {
              "opacity": 1,
              "transform": [
                {
                  "perspective": 600,
                },
                {
                  "rotateY": "90deg",
                },
                {
                  "rotateX": "0deg",
                },
                {
                  "rotateY": "0deg",
                },
                {
                  "translateY": 0,
                },
              ],
              "transformOrigin": "left center",
            }
          }
        >
          <View>
            <View>
              <View
                accessibilityLabel="Home"
                accessibilityRole="menuitem"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onLayout={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "#0000001F",
                    "flexDirection": "row",
                    "opacity": 1,
                    "padding": 16,
                    "paddingLeft": 16,
                  }
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                      "flexDirection": "column",
                    }
                  }
                >
                  <Text
                    onLayout={[Function]}
                    style={
                      [
                        {
                          "fontSize": 16,
                          "left": -9999,
                          "opacity": 0,
                          "position": "absolute",
                          "top": -9999,
                        },
                        {
                          "fontWeight": "normal",
                        },
                        undefined,
                      ]
                    }
                  >
                    Home
                  </Text>
                  <Text
                    numberOfLines={1}
                    style={
                      [
                        {
                          "alignSelf": "stretch",
                          "fontSize": 16,
                        },
                        {
                          "color": "#000000",
                          "fontSize": 16,
                          "fontWeight": "normal",
                          "letterSpacing": 0,
                          "textAlign": "left",
                        },
                        undefined,
                      ]
                    }
                  >
                    Home
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          collapsable={false}
          onLayout={[Function]}
          style={
            {
              "opacity": 1,
              "transform": [
                {
                  "perspective": 600,
                },
                {
                  "rotateY": "90deg",
                },
                {
                  "rotateX": "0deg",
                },
                {
                  "rotateY": "0deg",
                },
                {
                  "translateY": 0,
                },
              ],
              "transformOrigin": "left center",
            }
          }
        >
          <View>
            <View>
              <View
                accessibilityLabel="Settings"
                accessibilityRole="menuitem"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onLayout={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "#0000001F",
                    "flexDirection": "row",
                    "opacity": 1,
                    "padding": 16,
                    "paddingLeft": 16,
                  }
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                      "flexDirection": "column",
                    }
                  }
                >
                  <Text
                    onLayout={[Function]}
                    style={
                      [
                        {
                          "fontSize": 16,
                          "left": -9999,
                          "opacity": 0,
                          "position": "absolute",
                          "top": -9999,
                        },
                        {
                          "fontWeight": "normal",
                        },
                        undefined,
                      ]
                    }
                  >
                    Settings
                  </Text>
                  <Text
                    numberOfLines={1}
                    style={
                      [
                        {
                          "alignSelf": "stretch",
                          "fontSize": 16,
                        },
                        {
                          "color": "#000000",
                          "fontSize": 16,
                          "fontWeight": "normal",
                          "letterSpacing": 0,
                          "textAlign": "left",
                        },
                        undefined,
                      ]
                    }
                  >
                    Settings
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          collapsable={false}
          style={
            {
              "opacity": 0,
              "transform": [
                {
                  "scaleY": 0,
                },
              ],
              "transformOrigin": "top center",
            }
          }
        >
          <View
            style={
              [
                {
                  "borderTopColor": "#ccc",
                  "borderTopWidth": 1,
                  "padding": 16,
                },
                {
                  "alignItems": "center",
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "height": 1,
                    "marginVertical": 8,
                  },
                  {
                    "backgroundColor": "#6200ee",
                  },
                ]
              }
            />
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                  "paddingVertical": 4,
                  "width": "100%",
                }
              }
            >
              <Text
                adjustsFontSizeToFit={true}
                ellipsizeMode="clip"
                minimumFontScale={0.41}
                numberOfLines={1}
                style={
                  [
                    {
                      "color": "#6200ee",
                      "fontSize": 22,
                      "fontWeight": "normal",
                      "textAlign": "center",
                    },
                    undefined,
                  ]
                }
              >
                Feedback
              </Text>
            </View>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                  "paddingVertical": 4,
                  "width": "100%",
                }
              }
            >
              <Text
                adjustsFontSizeToFit={true}
                ellipsizeMode="clip"
                minimumFontScale={0.41}
                numberOfLines={1}
                style={
                  [
                    {
                      "color": "#6200ee",
                      "fontSize": 22,
                      "fontWeight": "normal",
                      "textAlign": "center",
                    },
                    undefined,
                  ]
                }
              >
                @HereLiesAz
              </Text>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
  <View
    style={
      {
        "flex": 1,
        "marginBottom": "10%",
        "marginTop": "20%",
      }
    }
  />
</View>
`;

exports[`AzNavRail renders correctly with rail items 1`] = `
<View
  style={
    {
      "flex": 1,
      "flexDirection": "row",
      "height": "100%",
    }
  }
>
  <View
    collapsable={false}
    onMoveShouldSetResponder={[Function]}
    onMoveShouldSetResponderCapture={[Function]}
    onResponderEnd={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderReject={[Function]}
    onResponderRelease={[Function]}
    onResponderStart={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onStartShouldSetResponderCapture={[Function]}
    style={
      {
        "backgroundColor": "#f0f0f0",
        "borderColor": "#ddd",
        "borderLeftWidth": 0,
        "borderRightWidth": 1,
        "height": "100%",
        "overflow": "hidden",
        "position": "relative",
        "transform": [],
        "width": 100,
        "zIndex": 10,
      }
    }
  >
    <View
      accessibilityHint="Double tap to toggle, long press to drag"
      accessibilityLabel="Expand Menu"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onLayout={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "opacity": 1,
          "padding": 16,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "gray",
            "borderRadius": 24,
            "height": 48,
            "justifyContent": "center",
            "width": 48,
          }
        }
      >
        <Text
          style={
            {
              "color": "white",
            }
          }
        >
          Icon
        </Text>
      </View>
    </View>
    <RCTScrollView
      contentContainerStyle={
        {
          "alignItems": "center",
          "paddingHorizontal": 12,
          "paddingVertical": 8,
        }
      }
    >
      <View>
        <View
          onLayout={[Function]}
        >
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "borderColor": "#6200ee",
                "borderRadius": 36,
                "borderWidth": 3,
                "height": 72,
                "justifyContent": "center",
                "marginBottom": 8,
                "opacity": 1,
                "overflow": "hidden",
                "width": 72,
              }
            }
          >
            <View
              accessibilityLabel="Home"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "bottom": 0,
                  "justifyContent": "center",
                  "left": 0,
                  "opacity": 1,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
              testID="1"
            >
              <View
                pointerEvents="none"
                style={
                  [
                    {
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    },
                    {
                      "backgroundColor": "rgba(0, 0, 0, 0.25)",
                      "borderRadius": 33,
                      "bottom": 3,
                      "left": 3,
                      "right": 3,
                      "top": 3,
                      "zIndex": -1,
                    },
                  ]
                }
              />
              <View
                style={
                  {
                    "alignItems": "center",
                    "height": "100%",
                    "justifyContent": "center",
                    "padding": 8,
                    "width": "100%",
                  }
                }
              >
                <Text
                  adjustsFontSizeToFit={true}
                  minimumFontScale={0.1}
                  numberOfLines={1}
                  style={
                    {
                      "color": "#6200ee",
                      "fontWeight": "bold",
                      "textAlign": "center",
                    }
                  }
                >
                  Home
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
  <View
    style={
      {
        "flex": 1,
        "marginBottom": "10%",
        "marginTop": "20%",
      }
    }
  />
</View>
`;
